# projectlint

./: .gitignore  README.md  projectlint.py  pyproject.toml
projectlint/: __main__.py  common.py
projectlint/rules/: docker.py  github.py  js.py  php.py
